[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/particles/Smoke.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/assets/vehicles/sprint_car.gltf" type="PackedScene" id=2]
[ext_resource path="res://src/vehicles/sprint_car.gd" type="Script" id=3]
[ext_resource path="res://src/assets/textures/texture_09.png" type="Texture" id=4]
[ext_resource path="res://src/assets/textures/shadow.png" type="Texture" id=5]

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 1, 1, 1, 0.627451 )
albedo_texture = ExtResource( 5 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )
size = Vector2( 2, 4 )

[sub_resource type="PhysicsMaterial" id=6]
bounce = 0.1
absorbent = true

[sub_resource type="SphereShape" id=1]

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
flags_world_triplanar = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_texture = ExtResource( 4 )
uv1_triplanar = true
uv2_triplanar = true

[node name="SprintCar" type="Spatial"]
script = ExtResource( 3 )

[node name="CarMesh" parent="." instance=ExtResource( 2 )]

[node name="RemoteTransform" type="RemoteTransform" parent="CarMesh/SR_Veh_SprintCar_Blue" index="4"]

[node name="GroundRay" type="RayCast" parent="CarMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )

[node name="Smoke" parent="CarMesh" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8, 0.274803, -1.36153 )
emitting = false

[node name="Smoke2" parent="CarMesh" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.8, 0.274803, -1.36153 )
emitting = false

[node name="Shadow" type="MeshInstance" parent="CarMesh"]
visible = false
mesh = SubResource( 5 )
skeleton = NodePath("../../Ball")

[node name="Ball" type="RigidBody" parent="."]
physics_material_override = SubResource( 6 )

[node name="Collision" type="CollisionShape" parent="Ball"]
shape = SubResource( 1 )

[node name="DebugMesh" type="MeshInstance" parent="Ball"]
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[editable path="CarMesh"]
